<?xml version="1.0" encoding="utf-8"?>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlanFragment"
        android:background="@color/mediumGray"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextForPlan"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/search_bg"
            android:drawableEnd="@drawable/baseline_search_24"
            android:drawablePadding="9dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/search"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fillViewport="true"
            android:paddingBottom="8dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextForPlan">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Example Chips -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/All_plans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/All_Plan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sunday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Monday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tuesday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Wednesday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Thursday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Friday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Saturday" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textViewForPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="1dp"
            android:paddingLeft="6dp"
            android:text="@string/week_Plan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/planRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewForPlan" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>