<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodplanerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_countrySelectionFragment"
            app:destination="@id/countrySelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.foodplanerapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.foodplanerapp.ui.slideshow.DailyMealFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_daily_meal" />
    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.foodplanerapp.PlanFragment"
        android:label="fragment_plan"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/countrySelectionFragment"
        android:name="com.example.foodplanerapp.CountrySelectionFragment"
        android:label="fragment_country_selection"
        tools:layout="@layout/fragment_country_selection" >
        <action
            android:id="@+id/action_countrySelectionFragment_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="com.example.foodplanerapp.MealDetailsFragment"
        android:label="fragment_meal_details"
        tools:layout="@layout/fragment_meal_details" />

</navigation>